Wed Jun 26 14:47:01 UTC 2002  Colin Watson  <cjwatson@debian.org>

	* Version: 2.4.0.
	* README: Update or remove references to "man-db-2.3" and similar.
	* man-db.gnu: Update and sync with GNU.
	* man-db.lsm: Update.
	* manual/man_db.me: Replace "2.3.x" with "2.4.x".
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fr.po,
	  po/it.po, po/ja.po: Update with msgmerge.

Wed Jun 26 14:09:25 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (name_sec): Allow whitespace before any closing
	  double quote. (rman(1) uses '.SH "NAME "'.)

Tue Jun 25 00:29:22 BST 2002  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Translation credits are in man/THANKS.
	* man/THANKS: Update.

	* manual/.cvsignore: New file.

Mon Jun 24 02:53:00 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_store.c (dbstore): Use \t instead of . to separate
	  case-variant-names and extensions in multi keys.
	* libdb/db_lookup.c (list_extensions): Take an extra 'names' array
	  argument, and split alternately into that and 'ext'.
	  (dblookup): Update and simplify accordingly; we don't need the
	  awkward '.' handling any more.
	* libdb/db_delete.c (dbdelete): Likewise.
	* libdb/db_storage.h (list_extensions): Update prototype.

	* include/manconfig.h.in: Database format version 2.4.1.

	* manual/db.me (Contents of an index database): Document
	  case-insensitive name storage format. Bring the documentation of
	  the database entry format up to date.
	* manual/sec.me (Specifying a section): Mention the SECTION
	  configuration directive.

Fri Jun 21 10:50:40 UTC 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (make_filename): in->comp may be NULL.

	* po/fr.po: Update from Translation Project.

Mon Jun 17 09:56:15 UTC 2002  Colin Watson  <cjwatson@debian.org>

	* configure.in (ALL_LINGUAS): Add ca.
	* src/man.c: Update some comments.
	* src/lexgrog.l: Treat \~ as a space. Treat \# as a comment. Treat
	  .ig as ending the whatis.
